resolve merge comflict
feature(ratings): user can fetch ratings on an article

> - add endpoint GET: /articles/:articleId/ratings
